--- a/src/assets/scss/modules/_cases.scss
+++ b/src/assets/scss/modules/_cases.scss
@@ -202,12 +202,14 @@
   }
 
   &__button {
+    margin: 0 auto;
     margin-top: 23px;
-    width: 100%;
+    width: calc(100% - 20px);
     @media screen and (min-width: $md-width) {
       padding-top: 27px;
+      margin: 0;
       margin-top: 57px;
-      width: auto;
+      max-width: 266px;
     }
   }
 }
