--- a/src/assets/scss/modules/_feedback.scss
+++ b/src/assets/scss/modules/_feedback.scss
@@ -57,7 +57,7 @@
     display: flex;
     justify-content: center;
     @media screen and (min-width: $lg-width) {
-      margin: 0 -15px;
+      margin: 0 -20px;
       margin-top: -40px;
     }
     .swiper-wrapper{
@@ -82,21 +82,29 @@
     flex-basis: 100%;
     flex-grow: 1;
     display: flex;
+    align-items: center;
     background: #FFFFFF;
     box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.03);
     border-radius: 3px;
     position: relative;
     padding: 52px 15px 20px 15px;
     @media screen and (min-width: $lg-width) {
-      padding: 30px 40px 30px 110px;
+      min-height: 280px;
+      padding: 30px 40px 30px 109px;
       flex-basis: calc(100%);
       max-width: calc(100% / 2 + 100px);
     }
     @media screen and (min-width: $xl-width) {
-      flex-basis: calc(100% / 2 - 102px - 15px);
-      margin-left: 102px;
+      max-width: 483px;
+      flex-basis: calc(100% / 2 - 82px - 15px);
+      margin-left: 82px;
       margin-right: 15px;
       margin-top: 40px;
+      &:nth-child(2n){
+        flex-basis: calc(100% / 2 - 107px);
+        margin-left: 107px;
+        margin-right: 0;
+      }
     }
     &::before{
       display: block;
