--- a/src/assets/scss/modules/_products.scss
+++ b/src/assets/scss/modules/_products.scss
@@ -7,14 +7,24 @@
     &:last-child{
       margin-bottom: 0;
     }
-    @media screen and (min-width: $lg-width){
-      margin-bottom: 0;
+    .products__content{
+      @media screen and (min-width: $lg-width){
+        padding-left: 10px;
+      }
     }
     &:nth-child(2n){
       @media screen and (min-width: $lg-width){
-        .products__image{
+          .products__content {
+            @media screen and (min-width: $lg-width) {
+              padding-left: 0;
+            }
+          }
 
-        }
+          .products__image {
+            img {
+              margin-left: -10px;
+            }
+          }
       }
     }
   }
@@ -45,11 +55,11 @@
     >button{
       width: 100%;
       @media screen and (min-width: $md-width){
-        width: auto;
         margin: 0 auto;
+        max-width: 325px;
       }
       @media screen and (min-width: $lg-width){
-        margin: unset;
+        margin: 0;
       }
     }
   }
@@ -58,7 +68,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin-bottom: 28px;
+    margin-bottom: 26px;
     height: 100%;
     @media screen and (min-width: $lg-width){
       max-height: unset;
@@ -74,6 +84,25 @@
       @media screen and (min-width: $sm-width){
         width: auto;
       }
+      @media screen and (min-width: $lg-width){
+        max-width: none;
+        max-height: none;
+      }
+    }
+    &.w-10{
+      img{
+        max-width: none;
+        width: calc(100% + 8px);
+      }
+    }
+  }
+  .button_lower{
+    width: calc(100% - 20px);
+    margin: 0 auto;
+    @media screen and (min-width: $lg-width){
+      width: 100%;
+      max-width: 288px;
+      margin: 0;
     }
   }
 }
